--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
 <body>
     <h1>Media Check</h1>
     <p>Try to open this site in diferent screen scales</p>
-    <div class="changing">ASD</div>
+    <div class="changing">
+        <ul>
+            <li>Whitesmoke  - 1200px</li>
+            <li>Yellowgreen - 800px</li>
+            <li>lightblue - 500px</li>
+        </ul>
+    </div>
 </body>
 </html>
